--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  @apply m-0 w-full bg-very-light-gray font-rubik text-base text-grayish-blue;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .btn {
+    @apply grid h-[48px] min-w-[104px] place-items-center rounded-lg border-none uppercase text-white outline-none transition-all duration-200 ease-in-out;
+  }
+
+  .btn.btn--blue {
+    @apply bg-moderate-blue hover:bg-light-grayish-blue;
+  }
+
+  .btn.btn--red {
+    @apply bg-soft-red hover:bg-pale-red;
+  }
+
+  .btn.btn--google {
+    @apply bg-google hover:bg-opacity-80;
+  }
+
+  .btn.btn--gray {
+    @apply bg-grayish-blue hover:bg-light-grayish-blue;
+  }
+
+  .btn__link {
+    @apply flex items-center border-none bg-transparent outline-none;
+  }
+
+  .btn__link svg {
+    @apply mr-2;
+  }
+
+  .btn__link.btn__link--red {
+    @apply font-medium text-soft-red transition-all duration-200 ease-in-out hover:text-pale-red;
+  }
+
+  .btn__link.btn__link--blue {
+    @apply font-medium text-moderate-blue transition-all duration-200 ease-in-out hover:text-light-grayish-blue;
+  }
 }
